--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,24 +119,24 @@ iframe {
 }
 .header .btn {
   margin-top: 60px;
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 .header .profile-image {
-  margin-right: 30px;
+  margin-right: 20px;
 }
 .header .profile-content .name {
   color: #49515a;
-  font-size: 38px;
-  margin-bottom: 5px;
+  font-size: 18px;
+  margin-bottom: 3px;
   margin-top: 30px;
 }
 .header .profile-content .desc {
   color: #778492;
   font-family: "Lato", arial, sans-serif;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 16px;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .header .profile-content .social a {
   background: #b0b7bf;
@@ -158,13 +158,13 @@ iframe {
   background: #778492;
 }
 .header .profile-content .social a .fa {
-  font-size: 20px;
+  font-size: 18px;
   padding-top: 8px;
 }
 /* ======= Sections======= */
 .sections-wrapper {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .section {
   margin-bottom: 30px;
@@ -208,10 +208,10 @@ iframe {
   opacity: 0.8;
 }
 .latest .divider {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 .latest .featured {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 .latest .featured .title {
   margin-bottom: 5px;
@@ -526,52 +526,8 @@ iframe {
   }
 }
 
-#navcontainer { 
-border-bottom : 10px solid #fff;
-} 
-#navcontainer ul { 
-text-align : center;
-padding-bottom : 5px;
-padding-top : 5px;
-padding-left : 0;
-margin-top : 0;
-margin-bottom : 0;
-margin-left : 0;
-background : #036;
-color : white;
-width : 100%;
-font-family : Arial, Helvetica, sans-serif;
-line-height : 18px;
-} 
-#navcontainer ul li { 
-display : inline;
-padding-left : 0;
-padding-right : 0;
-padding-bottom : 5px;
-padding-top : 5px;
-} 
-#navcontainer ul li a { 
-padding-left : 10px;
-padding-right : 10px;
-padding-bottom : 5px;
-padding-top : 5px;
-color : white;
-text-decoration : none;
-border-right : 1px solid #fff;
-} 
-#navcontainer ul li a:hover { 
-background : #369;
-color : white;
-} 
-#navcontainer #active { 
-border-left : 1px solid #fff;
-}  
-/* Small devices (tablets, 768px and up) */
-/* Medium devices (desktops, 992px and up) */
-/* Large devices (large desktops, 1200px and up) */
-/* Ex-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1400px) {
-  .container {
-    width: 1360px;
-  }
+.navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
 }
