--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -557,3 +557,15 @@ iframe {
 .blink-two {
     animation: blinker-two 5s linear infinite;
 }
+
+.blinking{
+    animation:blinkingText 1.2s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: #000;    }
+    49%{    color: #000; }
+    60%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
+
