--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -693,7 +693,7 @@ blink {
   border-bottom: 16px solid red;
 }
 
-.flip-card {
+flip-card {
   background-color: transparent;
   width: 300px;
   height: 200px;
@@ -715,4 +715,27 @@ blink {
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
  </style>
