--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,44 +81,70 @@ a.btn:hover {
   font-weight: bold;
 }
 
-/* Header */
-.header {
-  padding: 30px 0;
-  background: #f5f5f5;
-  border-top: 10px solid #3aaa64; /* Green accent color */
-  text-align: center;
+/* Header Styles */
+.header-container {
+    padding: 30px 0;
+    background: #f5f5f5;
+    border-top: 10px solid #778492;
+    text-align: center;
 }
-.header .btn {
-  margin-top: 30px;
+
+.profile-section {
+    display: flex;
+    align-items: center;
 }
-.header .profile-image {
-  margin-right: 20px;
-  margin-top: 6px;
+
+.profile-image {
+    margin-right: 20px;
+    max-width: 150px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.4s ease-in-out;
 }
-.header .profile-content .name {
-  color: #49515a;
-  font-size: 20px; /* Slightly smaller font size */
-  margin-top: 10px; /* Increased margin */
+
+.profile-image:hover {
+    transform: scale(1.1);
 }
-.header .profile-content .desc {
-  color: #778492;
-  font-size: 16px;
-  margin-top: 5px; /* Increased margin */
+
+.profile-content {
+    text-align: left;
 }
-.header .profile-content .social a {
-  background: #b0b7bf;
-  width: 36px;
-  height: 36px;
-  display: inline-block;
-  border-radius: 50%;
-  color: #fff;
-  text-align: center;
-  line-height: 36px;
-  margin: 0 5px;
+
+.name {
+    margin: 0;
+    font-size: 24px;
+    color: #3aaa64;
 }
-.header .profile-content .social a:hover {
-  background: #778492;
+
+.desc {
+    font-size: 16px;
+    color: #778492;
 }
+
+.navigation-section {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.navbar {
+    margin-bottom: 0;
+    background-color: transparent;
+}
+
+.navbar-toggler-icon {
+    border-color: #778492;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: #3aaa64;
+    transition: color 0.4s ease-in-out;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #2d844e;
+}
+
 
 /* Sections */
 .section {
