--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,7 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 .header .profile-image {
+    margin-top: 15px;
     margin-right: 20px;
     max-width: 150px;
     border-radius: 50%;
@@ -78,7 +79,7 @@ a.btn-cta-secondary:hover {
     transition: transform 0.4s ease-in-out;
 }
 .profile-image:hover {
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
 
 .profile-content {
