--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,42 +13,52 @@ a {
   color: #3aaa64;
   transition: all 0.4s ease-in-out;
 }
+
 a:hover {
   text-decoration: none;
   color: #2d844e; /* Darker green on hover */
 }
+
 .btn,
 a.btn {
   transition: all 0.4s ease-in-out;
   font-family: 'Montserrat', arial, sans-serif;
-  padding: 10px 20px; /* Increased padding */
+  padding: 12px 24px; /* Increased padding */
   font-weight: bold;
   text-transform: uppercase;
   border: none;
+  border-radius: 5px; /* Added border-radius */
   cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Added box shadow */
 }
+
 .btn .fa,
 a.btn .fa {
-  margin-right: 5px;
+  margin-right: 8px; /* Slightly increased margin */
 }
+
 .btn:focus,
 a.btn:focus {
   outline: none;
 }
+
 .btn-cta-primary,
 a.btn-cta-primary {
   background: #54ba4e;
   color: #fff;
 }
+
 .btn-cta-primary:hover,
 a.btn-cta-primary:hover {
   background: #49ac43;
 }
+
 .btn-cta-secondary,
 a.btn-cta-secondary {
   background: #479fc8;
   color: #fff;
 }
+
 .btn-cta-secondary:hover,
 a.btn-cta-secondary:hover {
   background: #3893bd;
@@ -71,7 +81,7 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 .header .profile-image {
-    margin-top: 15px;
+    margin-top: 18px;
     margin-right: 20px;
     max-width: 150px;
     border-radius: 50%;
