--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Links and Buttons */
 a {
-  color: #3aaa64;
+  color: #C27BA0;
   transition: all 0.4s ease-in-out;
 }
 
@@ -18,6 +18,7 @@ a:hover {
   text-decoration: none;
   color: #2d844e; /* Darker green on hover */
   transform: scale(1.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Added box shadow */
 }
 
 .btn,
