--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Links and Buttons */
 a {
-  color: #C27BA0;
+  color: #6FA8DC;
   transition: all 0.4s ease-in-out;
 }
 
@@ -25,7 +25,7 @@ a:hover {
 a.btn {
   transition: all 0.4s ease-in-out;
   font-family: 'Montserrat', arial, sans-serif;
-  padding: 12px 24px; /* Increased padding */
+  padding: 12px 20px; /* Increased padding */
   font-weight: bold;
   text-transform: uppercase;
   border: none;
