--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Links and Buttons */
 a {
-  color: #6FA8DC;
+  color: #1958EE;
   transition: all 0.4s ease-in-out;
 }
 
@@ -18,6 +18,7 @@ a:hover {
   text-decoration: none;
   color: #2d844e; /* Darker green on hover */
   transform: scale(1.1);
+  padding: 12px 20px; /* Increased padding */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Added box shadow */
 }
 
@@ -77,7 +78,7 @@ a.btn-cta-secondary:hover {
 .header {
   padding: 30px 0;
   background: #f5f5f5;
-  border-top: 10px solid #3aaa64; /* Green accent color */
+  border-top: 10px solid #1958EE; /* Green accent color */
   text-align: left;
 }
 .header .btn {
