--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,11 +81,11 @@ a.btn-cta-secondary:hover {
   text-align: left;
 }
 .header .btn {
-  margin-top: 190px;
+  margin-top: 30px;
 }
 
 
-.header .btn:hover {
+.header .nav navbar-nav .btn:hover {
   text-decoration: none;
   color: #2d844e; /* Darker green on hover */
    transform: scale(1.1);
