--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,7 +90,7 @@ a.btn-cta-secondary:hover {
 
 .navbar-nav li a:hover {
   background-color: #2d844e; /* Change to your desired hover background color */
-  color: #2d844e;/* Change to your desired hover text color */
+  color: white;/* Change to your desired hover text color */
   transform: scale(1.1);
 }
 
