--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,6 +85,7 @@ a.btn-cta-secondary:hover {
 }
 
 .navbar-nav li a {
+  margin-top: 180px;
   transition: background-color 0.3s ease; /* Adding a transition effect */
 }
 
