--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,16 +84,24 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
+
 /* Apply hover effect to the first level of list items */
 .navbar-nav > li > a {
   margin-top: 55px;
   transition: background-color 0.3s ease; /* Adding a transition effect */
 }
 
-.navbar-nav > li > a:hover {
-   transform: scale(1.1);
+
+.navbar-nav > li > a {
+  display: block;
+  padding: 10px 20px; /* Adjust padding as needed */
+  transition: background-color 0.3s ease;
 }
 
+.navbar-nav > li:hover > a {
+  background-color: rgba(45, 132, 78, 0.3); /* Highlight color with opacity */
+  color: white; /* Text color when hovered */
+}
 
 .header .profile-image {
     margin-top: 18px;
