--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,16 +91,12 @@ a.btn-cta-secondary:hover {
   transition: background-color 0.3s ease; /* Adding a transition effect */
 }
 
-
-.navbar-nav > li > a {
-  display: block;
-  padding: 10px 20px; /* Adjust padding as needed */
-  transition: background-color 0.3s ease;
+.navbar-nav > li > a:hover {
+   transform: scale(1.1);
 }
 
-.navbar-nav > li:hover > a {
-  background-color: rgba(45, 132, 78, 0.3); /* Highlight color with opacity */
-  color: white; /* Text color when hovered */
+.navbar-nav > li {
+  position: relative;
 }
 
 .header .profile-image {
