--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,8 +95,16 @@ a.btn-cta-secondary:hover {
    transform: scale(1.1);
 }
 
-.navbar-nav > li {
+.navbar-nav > li > a {
   position: relative;
+  top: 35px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: inline-block;
+  border: 2px solid #EBECF1;
+  background-color: white;
+  border-radius: 30px;
+  animation: slideIN 1s ease-out;
 }
 
 .header .profile-image {
