--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,16 +93,16 @@ a.btn-cta-secondary:hover {
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #9FC5E8;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 10px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 13px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #F9CB9C;
   color: black;
 }
 
