--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,8 +86,10 @@ a.btn-cta-secondary:hover {
 
 /* Add a background color to the top navigation */
 .topnav {
-  background-color: #9FC5E8;
+  background-color: #2E91DF;
   overflow: hidden;
+  height: 40px;
+  border-radius: 10px;
 }
 
 /* Style the links inside the navigation bar */
@@ -103,7 +105,7 @@ a.btn-cta-secondary:hover {
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #F9CB9C;
-  color: black;
+  color: #8E7CC3;
 }
 
 /* Add a color to the active/current link */
