--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,10 +86,11 @@ a.btn-cta-secondary:hover {
 
 /* Add a background color to the top navigation */
 .topnav {
-   margin-top: 50px;
+  margin-top: 50px;
   background-color: #2E91DF;
   overflow: hidden;
   border-radius: 10px;
+  height: 50px; /* Adjust the height as needed */
 }
 
 /* Style the links inside the navigation bar */
@@ -115,13 +116,13 @@ a.btn-cta-secondary:hover {
 }
 
 
-/* Apply hover effect to the first level of list items */
+/* Apply hover effect to the first level of list items margin-top: 55px; */
 .navbar-nav > li > a {
-  margin-top: 55px;
   transition: background-color 0.3s ease; /* Adding a transition effect */
 }
 
 .navbar-nav > li > a:hover {
+   border-radius: 10px;
    transform: scale(1.1);
 }
 
