--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,13 +115,14 @@ a.btn-cta-secondary:hover {
   color: white;
 }
 
+
 /* Styles for dropdown menus */
-.dropdown {
+.navbar-nav{
   position: relative;
   display: inline-block;
 }
 
-.dropdown-content {
+.navbar-nav-content {
   display: none;
   position: absolute;
   background-color: #2E91DF;
@@ -129,18 +130,18 @@ a.btn-cta-secondary:hover {
   z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+.navbar-nav:hover .dropdown-content {
   display: block;
 }
 
-.dropdown-content a {
+.navbar-nav-content a {
   color: #FFFFFF;
   padding: 10px 15px;
   display: block;
   text-decoration: none;
 }
 
-.dropdown-content a:hover {
+.navbar-nav-content a:hover {
   background-color: #1969A8;
   color: #8E7CC3;
 }
