--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,7 +90,7 @@ a.btn-cta-secondary:hover {
   background-color: #2E91DF;
   overflow: hidden;
   border-radius: 10px;
-  height: 50px; /* Adjust the height as needed */
+   /* height: 50px; Adjust the height as needed */
 }
 
 /* Style the first-level links inside the navigation bar */
