--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,90 +84,65 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
-/* Header Navigation Styles */
+/* Style the navigation bar */
 .topnav {
-  background-color: #34495E;
-  overflow: hidden;
+  margin-top: 20px;
+  background-color: #f8f9fa;
   border-radius: 10px;
-  height: 50px; /* Adjust the height as needed */
+  padding: 10px 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.topnav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.topnav li {
+/* Style the first-level links in the navigation bar */
+.topnav > ul > li {
   display: inline-block;
+  margin-right: 15px;
 }
 
-.topnav a {
-  color: #ECF0F1;
-  padding: 15px 20px;
+.topnav > ul > li:last-child {
+  margin-right: 0;
+}
+
+.topnav > ul > li > a {
   text-decoration: none;
-  font-size: 15px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.topnav a:hover {
-  background-color: #2ECC71;
-  color: white;
-}
-
-/* Styles for dropdown menus */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #34495E;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  min-width: 160px;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown-content a {
-  color: #ECF0F1;
+  color: #333;
+  font-size: 16px;
   padding: 10px 15px;
-  display: block;
-  text-decoration: none;
-  font-size: 14px;
-  transition: background-color 0.3s, color 0.3s;
 }
 
-.dropdown-content a:hover {
-  background-color: #2ECC71;
-  color: white;
+.topnav > ul > li > a:hover {
+  background-color: #f0f1f2;
+  border-radius: 5px;
 }
 
+/* Style the dropdown menus */
 .dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.dropdown-menu a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+.dropdown-menu > li > a {
+  color: #333;
+  padding: 10px 20px;
 }
 
-.dropdown-menu a:hover {
-  background-color: #ddd;
+.dropdown-menu > li > a:hover {
+  background-color: #f0f1f2;
 }
 
-.dropdown:hover .dropdown-menu {
-  display: block;
+/* Style the caret icon */
+.dropdown-toggle::after {
+  content: "\f0d7";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  margin-left: 5px;
+}
+
+/* Style the active link */
+.topnav > ul > li.active > a {
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 5px;
 }
 
 
