--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,6 +117,37 @@ a.btn-cta-secondary:hover {
   margin: 0;
 }
 
+
+.navbar a:hover, .dropdown:hover .dropdown-toggle {
+  background-color: red;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-menu a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-menu a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
 .header .profile-image {
     margin-top: 18px;
     margin-right: 20px;
