--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,13 +85,13 @@ a.btn-cta-secondary:hover {
 }
 
 /* Style the navigation bar */
-
 .topnav {
   margin-top: 50px;
   overflow: hidden;
   background-color: #333;
 }
 
+/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   font-size: 16px;
@@ -101,27 +101,30 @@ a.btn-cta-secondary:hover {
   text-decoration: none;
 }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: red;
 }
 
-.dropdown .dropdown-toggle {
+/* Style the dropdown menu */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Style the dropdown toggle button */
+.dropdown-toggle {
   font-size: 16px;  
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  cursor: pointer;
 }
 
-
-.navbar a:hover, .dropdown:hover .dropdown-toggle {
-  background-color: red;
-}
-
+/* Style the dropdown menu */
 .dropdown-menu {
   display: none;
   position: absolute;
@@ -131,8 +134,8 @@ a.btn-cta-secondary:hover {
   z-index: 1;
 }
 
+/* Style the dropdown menu items */
 .dropdown-menu a {
-  float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -140,13 +143,17 @@ a.btn-cta-secondary:hover {
   text-align: left;
 }
 
+/* Change the color of dropdown menu items on hover */
 .dropdown-menu a:hover {
   background-color: #ddd;
 }
 
+/* Display the dropdown menu when hovering over the dropdown */
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+
 
 .header .profile-image {
     margin-top: 18px;
