--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,53 +88,23 @@ a.btn-cta-secondary:hover {
 .topnav {
   margin-top: 50px;
   overflow: hidden;
-  background-color: #333;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
+.navbar-light .navbar-nav .nav-link {
   font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  color: #333;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: red;
-}
-
-/* Style the dropdown menu */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Style the dropdown toggle button */
-.dropdown-toggle {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-  cursor: pointer;
-}
-
-/* Style the dropdown menu */
-.dropdown-menu {
-  display: none;
-  position: absolute;
+.nav-item.active .nav-link {
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
-/* Style the dropdown menu items */
+/* Style the dropdown menus */
+.dropdown-menu {
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
 .dropdown-menu a {
   color: black;
   padding: 12px 16px;
@@ -143,15 +113,10 @@ a.btn-cta-secondary:hover {
   text-align: left;
 }
 
-/* Change the color of dropdown menu items on hover */
 .dropdown-menu a:hover {
   background-color: #ddd;
 }
 
-/* Display the dropdown menu when hovering over the dropdown */
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
 
 
 
