--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,39 +84,15 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
-/* Style the navigation bar */
-.topnav {
-  margin-top: 50px;
-  overflow: hidden;
+/* Apply hover effect to the first level of list items margin-top: 55px; */
+.navbar-nav > li > a {
+  transition: background-color 0.3s ease; /* Adding a transition effect */
 }
 
-.navbar-light .navbar-nav .nav-link {
-  font-size: 16px;
-  color: #333;
+.navbar-nav > li > a:hover {
+   border-radius: 10px;
+   transform: scale(1.1);
 }
-
-.nav-item.active .nav-link {
-  background-color: #f9f9f9;
-}
-
-/* Style the dropdown menus */
-.dropdown-menu {
-  min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown-menu a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-menu a:hover {
-  background-color: #ddd;
-}
-
 
 
 
