--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,15 +88,69 @@ a.btn-cta-secondary:hover {
   margin-top: 50px;
 }
 
-/* Apply hover effect to the first level of list items margin-top: 55px; */
-.navbar-nav > li > a {
-  transition: background-color 0.3s ease; /* Adding a transition effect */
+/* Style the navigation bar */
+.topnav {
+    margin-top: 20px;
+    background-color: #333;
+    overflow: hidden;
 }
 
-.navbar-nav > li > a:hover {
-   border-radius: 10px;
-   transform: scale(1.1);
+.topnav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
+
+.dropdown {
+    float: left;
+    position: relative;
+}
+
+.dropdown .dropdown-toggle {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: transparent;
+    font-family: inherit;
+    margin: 0;
+    padding: 14px 16px;
+    cursor: pointer;
+}
+
+.navbar a:hover, .dropdown:hover .dropdown-toggle {
+    background-color: #555;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-menu a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-menu a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
 
 
 
