--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,14 +84,10 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
-.navbar-nav {
-  margin-top: 50px;
-}
-
 /* Style the navigation bar */
 .topnav {
     margin-top: 20px;
-    background-color: #333;
+    background-color: #2980b9; /* Change the background color */
     overflow: hidden;
 }
 
@@ -100,7 +96,7 @@ a.btn-cta-secondary:hover {
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 20px; /* Adjust padding for better height */
     text-decoration: none;
 }
 
@@ -117,12 +113,12 @@ a.btn-cta-secondary:hover {
     background-color: transparent;
     font-family: inherit;
     margin: 0;
-    padding: 14px 16px;
+    padding: 15px 20px; /* Adjust padding for better height */
     cursor: pointer;
 }
 
 .navbar a:hover, .dropdown:hover .dropdown-toggle {
-    background-color: #555;
+    background-color: #1e6091; /* Change the hover background color */
 }
 
 .dropdown-menu {
@@ -137,7 +133,7 @@ a.btn-cta-secondary:hover {
 .dropdown-menu a {
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: 12px 20px; /* Adjust padding for better height */
     text-decoration: none;
     display: block;
     text-align: left;
@@ -151,6 +147,10 @@ a.btn-cta-secondary:hover {
     display: block;
 }
 
+/* Align Contact me link properly */
+.topnav li:last-child {
+    margin-right: 20px;
+}
 
 
 
