--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,7 @@ a.btn-cta-secondary:hover {
 
 .dropdown-menu {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
