--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,12 +87,12 @@ a.btn-cta-secondary:hover {
 /* Style the navigation bar */
 .topnav-wrapper {
     margin-top: 20px;
-    background-color: #2980b9;
     position: relative;
-    z-index: 1000; /* Adjusted z-index */
+    z-index: 1; /* Adjusted z-index */
 }
 
 .topnav {
+    background-color: #2980b9;
     overflow: hidden;
 }
 
@@ -107,7 +107,6 @@ a.btn-cta-secondary:hover {
 }
 
 .dropdown {
-    float: left;
     position: relative;
 }
 
@@ -118,7 +117,6 @@ a.btn-cta-secondary:hover {
     color: white;
     background-color: transparent;
     font-family: inherit;
-    margin: 0;
     padding: 10px 15px;
     line-height: 20px;
     cursor: pointer;
@@ -135,7 +133,8 @@ a.btn-cta-secondary:hover {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1001;
+    z-index: 2; /* Adjusted z-index */
+    top: 100%; /* Position the dropdown below the parent link */
 }
 
 .dropdown-menu a {
@@ -159,6 +158,7 @@ a.btn-cta-secondary:hover {
 .topnav li:last-child {
     margin-right: 20px;
 }
+
 
 
 
