--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,14 +127,15 @@ a.btn-cta-secondary:hover {
 
 .dropdown-menu {
     display: none;
-    position: relative;
+    position: absolute; /* Use absolute positioning */
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 2;
     top: 100%;
-    left: 0; /* Position the dropdown menu on the left */
+    left: 0;
 }
+
 
 .dropdown-menu a {
     color: black;
