--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,10 +103,11 @@ a.btn-cta-secondary:hover {
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 10px 15px;
-    line-height: 20px;
+    padding: 4px 5px;
+    line-height: 50px;
     text-decoration: none;
     display: inline-block; /* Display items inline */
+    white-space: nowrap;
 }
 
 .navbar a:hover,
@@ -127,7 +128,7 @@ a.btn-cta-secondary:hover {
 
 .dropdown-menu a {
     color: black;
-    padding: 10px 15px;
+     padding: 10px 0px;
     text-decoration: none;
     display: block;
     text-align: left;
